--- a/.env
+++ b/.env
@@ -9,12 +9,12 @@ ROOT_URL=http://localhost:8888
 AUGMENTATION_FACTOR=50
 MONGO_URL=mongodb://mongo:27017/bf
 IMAGES_DEFAULT_BOTFRONT=botfront/botfront:v1.0.5
-IMAGES_DEFAULT_RASA=botfront/rasa-for-botfront:v2.3.3-bf.3
+IMAGES_DEFAULT_RASA=teploeodealko/rasa-for-botfront:2.3.3-e8-1.2.1
 IMAGES_DEFAULT_DUCKLING=botfront/duckling:latest
 IMAGES_DEFAULT_MONGO=mongo:latest
 IMAGES_DEFAULT_ACTIONS=rasa/rasa-sdk:2.1.2
 IMAGES_CURRENT_BOTFRONT=botfront/botfront:v1.0.5
-IMAGES_CURRENT_RASA=botfront/rasa-for-botfront:v2.3.3-bf.3
+IMAGES_CURRENT_RASA=teploeodealko/rasa-for-botfront:2.3.3-e8-1.2.1
 IMAGES_CURRENT_DUCKLING=botfront/duckling:latest
 IMAGES_CURRENT_MONGO=mongo:latest
 IMAGES_CURRENT_ACTIONS=rasa/rasa-sdk:2.1.2
